fix gauge animations

--- a/src/less/index.less
+++ b/src/less/index.less
@@ -360,6 +360,10 @@ body {
     bottom: 2px;
 }
 
+.slider-fill, .slider-mark {
+    transition: all 0.3s linear;
+}
+
 .slider-label {
     font-family: 'Amatic SC', sans-serif;
     font-weight: 600;
